<resources>
    <string name="app_name">FirstApplication</string>
    <string name="action_settings">Settings</string>
    <string name="enter_a_message">Enter a message</string>
    <string name="send">send</string>
    <string name="sample_message">Sample Message</string>
    <string name="title_grid">Grid</string>
    <string name="title_list">list</string>
    <string name="title_register">Register</string>
    <string name="intent_new_activity">Intent new activity</string>
    <string name="recyclerview">Recyclerview</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="power_connected">Power connected</string>
    <string name="power_disconnected">power disconnected</string>
    <string name="custom_broadcast_toast">custom broadcast toast</string>

    <string name="notification_title">You\'ve been notified!</string>
    <string name="notification_text">This is your notification text.</string>
    <string name="learn_more">Learn More</string>
    <string name="update">Update</string>
    <string name="notify_me">Notify Me!</string>
    <string name="update_me">Update Me!</string>
    <string name="cancel_me">Cancel Me!</string>
    <string name="notification_updated">Notification Updated!</string>

    <!-- Button label for blue button -->
    <string name="blue_button">Blue</string>

    <!-- Button label for green button -->
    <string name="green_button">Green</string>

    <!-- Button label for red button -->
    <string name="red_button">Red</string>

    <!-- Button label for black button -->
    <string name="black_button">Black</string>

    <!-- Default string for count textview -->
    <string name="default_count">0</string>

    <!-- Button label for Count button -->
    <string name="count_button">Count</string>

    <!-- Button label for Reset button -->
    <string name="reset_button">Reset</string>
    <string name="title_shared_pref">SharedPreference</string>
    <string name="title_notification">Notification</string>
    <string name="title_sqlite_activity">SQLite Activity</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="phone">phone</string>
    <string name="register">Register</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="ok">ok</string>


    <!--firebase message-->
    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="msg_subscribe_failed">Failed to subscribe to news topic</string>
    <string name="show_token">Show Token</string>
    <string name="khmer">ខ្មែរ</string>
    <string name="english">English</string>
    <string name="cloud_messaging">Cloud Messaging</string>
    <string name="notification">Notification</string>
    <string name="title_activity_maps">Map</string>
    <string name="option_get_place">Get place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="pick_place">Choose a place</string>
    <!--end firebase message-->
    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <string name="flash_on" translatable="false">Flash [ON]</string>
    <string name="flash_off" translatable="false">Flash [OFF]</string>
    <string name="auto_focus_on" translatable="false">Auto Focus [ON]</string>
    <string name="auto_focus_off" translatable="false">Auto Focus [OFF]</string>
    <string name="formats" translatable="false">Formats</string>
    <string name="choose_formats" translatable="false">Choose Formats</string>
    <string name="select_camera" translatable="false">Select a Camera</string>
    <string name="rationale_camera">This app needs access to your camera so you can take pictures.</string>
    <string name="cancel">Cancel</string>
    <string name="camera">Camera</string>
</resources>
