<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".NotificationActivity">
    <Button
        android:text="@string/notify_me"
        android:id="@+id/btn_notify_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/update_me"
        android:id="@+id/btn_update_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/cancel_me"
        android:id="@+id/btn_cancel_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>